crates/uitest/fixtures/ty/def/mut_arg_place_requires_explicit_mut.snap
---
source: crates/uitest/tests/ty.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty/def/mut_arg_place_requires_explicit_mut.fe
---
error[8-0069]: explicit borrow required
  ┌─ mut_arg_place_requires_explicit_mut.fe:5:10
  │
5 │     bump(x)
  │          ^ this argument must be explicitly borrowed as `mut`
  │
  = help: try `mut x`
